feat: expose function build logs in console
